@@ -142,7 +142,7 @@ FONT 8, "MS Sans Serif"
 #else
 #define INFO_Y  18
 #endif
-IDD_INFO DIALOG 0, 0, 300, 88+INFO_Y
+IDD_INFO DIALOG 0, 0, 300, 102+INFO_Y
 STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | WS_POPUPWINDOW | WS_VISIBLE
 CAPTION "File information"
 FONT 8, "MS Sans Serif"
@@ -151,15 +151,20 @@ FONT 8, "MS Sans Serif"
 	AUTOCHECKBOX "Show information about the &currently playing file", IDC_PLAYING, 46, 8, 284, 12
 #endif
 	RTEXT "&Filename:", IDC_STATIC, 8, 10+INFO_Y, 30, 12
-	EDITTEXT IDC_FILENAME, 46, 8+INFO_Y, 246, 12, ES_LEFT | WS_BORDER | WS_TABSTOP | ES_READONLY
+	EDITTEXT IDC_FILENAME, 46, 8+INFO_Y, 246, 12, ES_LEFT | ES_READONLY | WS_BORDER | WS_TABSTOP
 	RTEXT "&Author:", IDC_STATIC, 8, 24+INFO_Y, 30, 12
-	EDITTEXT IDC_AUTHOR, 46, 22+INFO_Y, 246, 12
+	EDITTEXT IDC_AUTHOR, 46, 22+INFO_Y, 246, 12, ES_LEFT | ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP
 	RTEXT "&Name:", IDC_STATIC, 8, 38+INFO_Y, 30, 12
-	EDITTEXT IDC_NAME, 46, 36+INFO_Y, 246, 12
+	EDITTEXT IDC_NAME, 46, 36+INFO_Y, 246, 12, ES_LEFT | ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP
 	RTEXT "&Date:", IDC_STATIC, 8, 52+INFO_Y, 30, 12
-	EDITTEXT IDC_DATE, 46, 50+INFO_Y, 246, 12
-	DEFPUSHBUTTON "&Save", IDC_SAVE, 144, 68+INFO_Y, 70, 14
-	PUSHBUTTON "Close", IDCANCEL, 222, 68+INFO_Y, 70, 14
+	EDITTEXT IDC_DATE, 46, 50+INFO_Y, 246, 12, ES_LEFT | ES_AUTOHSCROLL | WS_BORDER | WS_TABSTOP
+	RTEXT "S&ong:", IDC_STATIC, 8, 66+INFO_Y, 30, 12
+	COMBOBOX IDC_SONGNO, 46, 64+INFO_Y, 26, 12, CBS_DROPDOWNLIST | WS_TABSTOP
+	RTEXT "&Time:", IDC_STATIC, 80, 66+INFO_Y, 20, 12
+	EDITTEXT IDC_TIME, 108, 64+INFO_Y, 40, 12
+	AUTOCHECKBOX "&Loop", IDC_LOOP, 156, 64+INFO_Y, 40, 12
+	DEFPUSHBUTTON "&Save", IDC_SAVE, 184, 82+INFO_Y, 50, 14
+	PUSHBUTTON "Close", IDCANCEL, 242, 82+INFO_Y, 50, 14
 }
 #endif
 
