@@ -1,3 +1,10 @@
+2007-10-28  Piotr Fusik  <fox@scene.pl>
+* asap.c, win32/gui.c, win32/gui.h, win32/gui.rc, win32/wasap/wasap.c,
+  win32/winamp/in_asap.c: TIME tag editor
+
+* asap.h, configure.ac, win32/Makefile, NEWS: version 1.0.2
+
+
 2007-10-06  Piotr Fusik  <fox@scene.pl>
 * asap.h, java/ASAP.ppjava: reduced delta_buffer from 1024 to 888 bytes
 
